...
        placeholder="Email"
        onChangeText={setEmailAddress}
        keyboardType="email-address"
      />
      <FormInput
        value={password}
        placeholder="Password"
        secureTextEntry
        autoCapitalize="none"
        autoCorrect={false}
        textContentType={passwordContentType}
        onChangeText={setPassword}
      />
...
